--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/dist/style.css"> 
-    <script defer src="/dist/script.js"></script>
+    <link rel="stylesheet" href="dist/style.css"> 
+    <script defer src="dist/script.js"></script>
 
     <style>
       .attribution { font-size: 11px; text-align: center; }
